[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/generator.gd" type="Script" id=1]
[ext_resource path="res://scenes/animate/enemies/ghost/ghost.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/defaultXOR.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.5, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 3 )

[sub_resource type="CylinderMesh" id=6]
material = SubResource( 5 )
top_radius = 0.75
bottom_radius = 1.35
height = 3.0
radial_segments = 4

[sub_resource type="Animation" id=3]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 0, 1, 1 ) ]
}

[sub_resource type="SphereShape" id=4]
radius = 15.0

[node name="GhostGenerator" type="StaticBody"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Axis Lock", "Collision", "collision" ]
active = true
Health = 3
regenIntervalInSeconds = 0.25
retryIntervalInSeconds = 0.1
activationRadius = 10
radiusExpandAmount = 1
maxSpawnable = 8
toGenerate = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 1.5, 0 )
mesh = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 1.5, 0, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="activateRadius" type="Area" parent="."]
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="activateRadius"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="activateRadius" to="." method="_on_activateRadius_body_entered"]
[connection signal="body_exited" from="activateRadius" to="." method="_on_activateRadius_body_exited"]
